# PyDBoW2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ext.cpp  setup.py  test.py
DBoW2/: BRIEFextractor.cpp  BRIEFextractor.h  FBrief.cpp  FBrief.h  TemplatedVocabulary.h
DLoopDetector/: DLoopDetector.h
PyDBoW2/: __init__.pyi
